2008-01-02  Bernhard Walle <bernhard.walle@gmx.de>

	* add support for checksum testing after download to ensure
	  that the download was correct

2008-01-01  Bernhard Walle <bernhard.walle@gmx.de>

	* trace downloading
	* Windows: fix problem that download is corrupted since Windows
	  discriminates between binary and text files and the ios::binary
	  was missing in the download code

2007-12-31  Bernhard Walle <bernhard.walle@gmx.de>

	* GUI: report downloading in status bar
	* CLI: re-discover update devices after upload, and reset the current
	  update device in that case
	* bump version to 0.1.1
	* GUI: implement logfile option

2007-12-30  Bernhard Walle <bernhard.walle@gmx.de>

	* CLI: enable USB debugging in debugging mode (-D)
	* improve debugging functions (Debug class to print debug messages)

2007-12-27  Bernhard Walle <bernhard.walle@gmx.de>

	* fix compilation with gcc 4.3
	* fix libusb detection for old libusb versions that have no .pc file

2007-12-16  Bernhard Walle <bernhard.walle@gmx.de>

	* implemented cache commands in the GUI
	* small corrections in command descriptions
	* added manpages

2007-12-11  Bernhard Walle <bernhard.walle@gmx.de>

	* fixed wrong "firmware file invalid" error in the GUI when specifying
	  a local file for uploading
	* it's now possible to specify a device name for the "device" command
	  instead of the device number

2007-12-10  Bernhard Walle <bernhard.walle@gmx.de>

	* the "upload" command also accepts filenames directly now

2007-11-22  Bernhard Walle <bernhard.walle@gmx.de>

	* fixed and tested GUI on Win32
	* added the GUI to the installer on Win32

2007-11-21  Bernhard Walle <bernhard.walle@gmx.de>

	* implemented GUI (tested on Linux)

2007-11-18  Bernhard Walle <bernhard.walle@gmx.de>

	* created installer (based on installer for the USBprog GUI)
	* added resource file to get an application icon on MS Windows

2007-11-17  Bernhard Walle <bernhard.walle@gmx.de>

	* Win32 port.